syntax = "proto3";

package hello;

service Greeter {
  rpc SayHello (SayRequest) returns (SayResponse);
}

message SayRequest {
  string name = 1;
}

message SayResponse {
  string message = 1;
}
